COMPILER/NUFI/nufi.output
Grammar

    0 $accept: S $end

    1 S: X

    2 X: A B
    3  | G

    4 A: START_URGE

    5 B: C D

    6 D: E F

    7 E: KEY_URGE

    8 F: PRONOUN

    9 G: H I

   10 H: START_SENTIMENT

   11 I: E F

   12 C: WORD


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WORD <texte> (258) 12
    START_URGE <texte> (259) 4
    KEY_URGE <texte> (260) 7
    PRONOUN <texte> (261) 8
    START_SENTIMENT <texte> (262) 10


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    S (9)
        on left: 1
        on right: 0
    X (10)
        on left: 2 3
        on right: 1
    A (11)
        on left: 4
        on right: 2
    B (12)
        on left: 5
        on right: 2
    D (13)
        on left: 6
        on right: 5
    E (14)
        on left: 7
        on right: 6 11
    F (15)
        on left: 8
        on right: 6 11
    G (16)
        on left: 9
        on right: 3
    H (17)
        on left: 10
        on right: 9
    I (18)
        on left: 11
        on right: 9
    C (19)
        on left: 12
        on right: 5


State 0

    0 $accept: . S $end

    START_URGE       shift, and go to state 1
    START_SENTIMENT  shift, and go to state 2

    S  go to state 3
    X  go to state 4
    A  go to state 5
    G  go to state 6
    H  go to state 7


State 1

    4 A: START_URGE .

    $default  reduce using rule 4 (A)


State 2

   10 H: START_SENTIMENT .

    $default  reduce using rule 10 (H)


State 3

    0 $accept: S . $end

    $end  shift, and go to state 8


State 4

    1 S: X .

    $default  reduce using rule 1 (S)


State 5

    2 X: A . B

    WORD  shift, and go to state 9

    B  go to state 10
    C  go to state 11


State 6

    3 X: G .

    $default  reduce using rule 3 (X)


State 7

    9 G: H . I

    KEY_URGE  shift, and go to state 12

    E  go to state 13
    I  go to state 14


State 8

    0 $accept: S $end .

    $default  accept


State 9

   12 C: WORD .

    $default  reduce using rule 12 (C)


State 10

    2 X: A B .

    $default  reduce using rule 2 (X)


State 11

    5 B: C . D

    KEY_URGE  shift, and go to state 12

    D  go to state 15
    E  go to state 16


State 12

    7 E: KEY_URGE .

    $default  reduce using rule 7 (E)


State 13

   11 I: E . F

    PRONOUN  shift, and go to state 17

    F  go to state 18


State 14

    9 G: H I .

    $default  reduce using rule 9 (G)


State 15

    5 B: C D .

    $default  reduce using rule 5 (B)


State 16

    6 D: E . F

    PRONOUN  shift, and go to state 17

    F  go to state 19


State 17

    8 F: PRONOUN .

    $default  reduce using rule 8 (F)


State 18

   11 I: E F .

    $default  reduce using rule 11 (I)


State 19

    6 D: E F .

    $default  reduce using rule 6 (D)
